--- a/about.html
+++ b/about.html
@@ -15,15 +15,17 @@
             </header>
 
             <main>
-                <p>Цей проєкт був створений для хакатону 2024 року. Гра імітує один день з життя студента у 2D вигляді.
+                <p>Цей проєкт був створений для хакатону 2024 року. </p>
+                <p>Гра імітує один день з життя студента у 2D
+                    вигляді.
                 </p>
-                <p>Тут можна розповісти більше про концепцію гри та ідею проекту.</p>
+                <p>Автори: Лопіт Софія КН-42 та Лямцева Олександра КН-43.</p>
 
                 <button onclick="window.location.href='index.html'">Назад до меню</button>
             </main>
 
             <footer>
-                <p>&copy; 2024 Хакатон. Всі права захищено.</p>
+                <p>&copy; 2024 Хакатон.</p>
             </footer>
         </div>
     </body>
