--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </main>
 
             <footer>
-                <p>&copy; 2024 Хакатон. Всі права захищено.</p>
+                <p>&copy; 2024 Хакатон.</p>
             </footer>
         </div>
     </body>
