--- a/instructions.html
+++ b/instructions.html
@@ -57,7 +57,7 @@
                 <h2>Ресурси гри:</h2>
                 <ul>
                     <li><strong>Енергія:</strong> Втрачається при русі або виконанні завдань. Відновлюється в їдальні,
-                        гуртожитку, спортзалі та деяких інших місцях.</li>
+                        гуртожитку та спортзалі.</li>
                     <li><strong>Увага:</strong> Втрачається на лекціях, підготовці до іспиту та інших інтелектуальних
                         завданнях. Відновлюється в бібліотеці або при взаємодії з дружніми студентами.</li>
                     <li><strong>Час:</strong> Гра обмежена часом. Кожна дія забирає частину часу, тому потрібно
