--- a/game.html
+++ b/game.html
@@ -33,7 +33,7 @@
             </main>
 
             <footer>
-                <p>&copy; 2024 Хакатон. Всі права захищено.</p>
+                <p>&copy; 2024 Хакатон.</p>
             </footer>
         </div>
 
